crates/rattler_build_variant_config/src/snapshots/rattler_build_variant_config__conda_build_config__tests__conda_build_config__all_filtered.yaml_none.snap
---
source: crates/rattler_build_variant_config/src/conda_build_config.rs
expression: config
---
{}
