crates/rattler_build_variant_config/src/snapshots/rattler_build_variant_config__conda_build_config__tests__conda_build_config__test_1.yaml_none.snap
---
source: crates/rattler_build_variant_config/src/conda_build_config.rs
expression: config
---
c_compiler:
  - clang
c_compiler_version:
  - "18"
other_stuff:
  - "123"
